--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,13 @@ if (DEFINED ENV{DOXYGEN_EXECUTABLE})
     set(DOXYGEN_EXECUTABLE $ENV{DOXYGEN_EXECUTABLE})
 endif()
 
+set(DOXYGEN_IMAGE_PATH "${CMAKE_SOURCE_DIR}/docs/images" CACHE STRING "Doxygen image path" FORCE)
+file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/images")
+file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/doxygen/qlib/TarDataProvider")
+file(WRITE
+    "${CMAKE_BINARY_DIR}/doxygen/qlib/TarDataProvider/tar-logo.svg.dox.h"
+    "/** @file tar-logo.svg.dox.h\n    @brief TAR DataProvider logo file.\n*/\n"
+)
 set(MODULE_DOX_INPUT ${CMAKE_BINARY_DIR})
 qore_external_binary_module(${module_name} ${PROJECT_VERSION})
 
